# Advent-of-Code

./: .gitignore  output.txt
2022/Day 2/: main.cpp  output.txt
2022/Day 4/: main.cpp
2022/Day 5/: main.cpp
Tasks/2022/: main-Template.cpp
Tasks/2022/Day 1/: main.cpp
Tasks/2022/Day 10/: main.cpp
Tasks/2022/Day 11/: Monkey.cpp  Monkey.h  main.cpp  test.txt
Tasks/2022/Day 12/: main.cpp
Tasks/2022/Day 3/: main.cpp
Tasks/2022/Day 5/: main.cpp
Tasks/2022/Day 6/: main.cpp
Tasks/2022/Day 7/: main.cpp  test.txt
Tasks/2022/Day 8/: main.cpp
Tasks/2022/Day 9/: main.cpp
Tasks/2023/: AoC-Module.h  Makefile  entry-point.cpp
Tasks/2023/Day 1/: main.cpp
Tasks/2023/Day_1/: main.cpp
Tasks/2023/Day_10/: main.cpp
Tasks/2023/Day_11/: main.cpp
Tasks/2023/Day_12/: main.cpp  output.txt  sample.txt
Tasks/2023/Day_13/: main.cpp  output.txt
Tasks/2023/Day_14/: main.cpp
Tasks/2023/Day_2/: main.cpp
Tasks/2023/Day_3/: main.cpp
Tasks/2023/Day_4/: main.cpp
Tasks/2023/Day_5/: main.cpp
Tasks/2023/Day_6/: main.cpp
Tasks/2023/Day_7/: main.cpp
Tasks/2023/Day_8/: main.cpp  main.cpp.back  output.txt  output1.txt
Tasks/2023/Day_9/: main.cpp
Tasks/2024/: AoC-Module.h  CMakeLists.txt  Makefile  entry-point.cpp
Tasks/2024/Day1/: CMakeLists.txt  main.cpp
Tasks/2024/Day10/: CMakeLists.txt  main.cpp
Tasks/2024/Day11/: CMakeLists.txt  main.cpp
Tasks/2024/Day12/: CMakeLists.txt  main.cpp
Tasks/2024/Day13/: CMakeLists.txt  main.cpp
Tasks/2024/Day14/: CMakeLists.txt  main.cpp
Tasks/2024/Day15/: CMakeLists.txt  main.cpp
Tasks/2024/Day16/: CMakeLists.txt  main.cpp  test.py
Tasks/2024/Day17/: CMakeLists.txt  main.cpp
Tasks/2024/Day18/: CMakeLists.txt  main.cpp
Tasks/2024/Day19/: CMakeLists.txt  main.cpp
Tasks/2024/Day2/: CMakeLists.txt  main.cpp
Tasks/2024/Day20/: CMakeLists.txt  main.cpp
Tasks/2024/Day21/: CMakeLists.txt  main.cpp
Tasks/2024/Day22/: CMakeLists.txt  main.cpp
Tasks/2024/Day23/: CMakeLists.txt  main.cpp
Tasks/2024/Day24/: CMakeLists.txt  graph.txt  input.txt  main.cpp
Tasks/2024/Day25/: CMakeLists.txt
Tasks/2024/Day3/: CMakeLists.txt  main.cpp
Tasks/2024/Day4/: CMakeLists.txt  main.cpp
Tasks/2024/Day5/: CMakeLists.txt  main.cpp
Tasks/2024/Day6/: CMakeLists.txt  main.cpp
Tasks/2024/Day7/: CMakeLists.txt  main.cpp
Tasks/2024/Day8/: CMakeLists.txt  main.cpp
Tasks/2024/Day9/: CMakeLists.txt  main.cpp
Tasks/2024/Lib/: AoC-Module.h  CMakeLists.txt  HashHelper.hpp  Vector2.hpp  Vector3.hpp  libmain.cpp  main.cpp
